Fix keywords cloud overflow

--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -178,7 +178,7 @@ angular-tag-cloud > span {
 
 .card-body {
   angular-tag-cloud {
-    // overflow: auto;
+    overflow: visible;
     // position: initial;
   }
 }
